--- a/dev/sh.less
+++ b/dev/sh.less
@@ -26,8 +26,8 @@ html {
 /* Baloons */
 @import url('@{shut-url}css.Balloons.less');
 
-/* ExpandList behavior styles */
-@import url('@{shut-url}css.ExpandList.less');
+/* Expand behavior styles */
+@import url('@{shut-url}css.Expands.less');
 
 /* Forms */
 @import url('@{shut-url}css.Forms.less');
