--- a/dev/css.Layout.less
+++ b/dev/css.Layout.less
@@ -74,9 +74,9 @@ p {
 
 /* lightboxes */
 .dialog, .dialogcontent {
-	.columns(7);
-	height: 300px;
-	
+	width: 90%;
+	min-height: 300px;
+	/* this needs a lot of work*/
 	display: none;
 	position: fixed;
     top: 10%;
@@ -96,7 +96,7 @@ p {
 }
 
 .widewindow {
-	width: 95%;
+	/*width: 95%; REDO */
 }
 .tallwindow {
 	height: 80%;
