--- a/dev/rtl.sh.less
+++ b/dev/rtl.sh.less
@@ -1,8 +1,8 @@
 ﻿/// <reference path="sh.vars.less" />
 /// <reference path="sh.functions.less" />
 
-
-@media rtl {
+/* RTL BEGIN */
+/*@media rtl {*/
 	body, textarea, select, option, input 
 	{
 		font-family: @arfontface;
@@ -18,13 +18,10 @@
 	}
 	h1,h2,h3,h4, h5 {
 		font-family: @arlightfontface;
-		font-weight: normal;
+		
 	}
 	
-	p.normal, .normal p, .normal {
-		
-		font-family: @arfontface;
-	}
+	
 	.directionwrapper {
 		#jqmContent {
 			direction: rtl;
@@ -37,4 +34,5 @@
 	textarea {
 		overflow-x: hidden; /*watch*/
 	}
-}
+/*}*/
+/* RTL END */
