--- a/dev/sh.media.3.768.less
+++ b/dev/sh.media.3.768.less
@@ -8,7 +8,12 @@
    .sitewidth(8);	
 }
 
-
+.dialog, .dialogcontent {
+	.columns(7);
+}
+.tightwindow {
+	.columns(4);
+}
 .mobilelist {
 	display: block;
 }
