Updated and fixed few bugs

--- a/dev/css.Balloons.less
+++ b/dev/css.Balloons.less
@@ -14,7 +14,7 @@
 		width: 0;
 	}
 }
-.balloon {
+.balloon() {
 	.basicballoon;
 	
 	@border: 5px;
@@ -59,7 +59,7 @@
 	}
 }
 
-.b_balloon {
+.b_balloon() {
 	position: relative;
 	background-color: #fff;
 	@diameter: 10px;
