--- a/dev/css.Layout.less
+++ b/dev/css.Layout.less
@@ -56,7 +56,7 @@ header nav.main {
 	
 }
 /* navigation */
-nav ul li a {
+nav>ul>li>a {
 	padding: @extraSpace/2;
 	margin-bottom: 1px;
 	display: block;
@@ -80,26 +80,49 @@ p {
 	display: none;
 	position: fixed;
     top: 10%;
+	
 	z-index: 5000;
 	/*.box-shadow-2(inset 0 0 3px rgba(0,0,0, 0.9), 0 0 10px rgba(0,0,0, 0.9));*/
 	
 	.border-radius(@radius);
 	left: 50%;
 	background-color:@inversecolor;
-	padding: 5px;
-	
+	padding: @boxpadding;
+	outline: none;
 	
 }
 .dialogcontent {
 	background-color:@inversecolor;
-	padding: 5px;
+	padding: @boxpadding;
+}
+#jqmContent {
+	 width:100%; min-height:90%; 
+	 display: block; clear:both; margin:auto; overflow-y: auto;
+	 overflow-x: hidden;
+}
+.directionwrapper {
+	overflow-y: auto;
+	-webkit-overflow-scrolling: touch;
+
+	overflow-x: hidden;
+	position: absolute;
+	top: 60px;
+	bottom: @boxpadding;
+	left: @boxpadding;
+	right: @boxpadding;
+
+	#jqmContent {
+		overflow-y:  hidden;
+		overflow-x: hidden;
+		/*height: 100%;*/
+	}
 }
 
 .widewindow {
 	/*width: 95%; REDO */
 }
 .tallwindow {
-	height: 80%;
+	bottom: 20px;
 }
 .respwindow {
 	width: 95%!important;
@@ -113,6 +136,9 @@ p {
 .autowindow { /* use this with ajaxed content only */
 	min-height: 120px;
 	height: auto;
+	.directionwrapper {
+		position: static; /* is this right?*/
+	}
 }
 h3.jqmTitle {
 	
@@ -120,22 +146,6 @@ h3.jqmTitle {
 }
 .jqmOverlay { background-color: rgba(0,0,0,0.8); }
 
-#jqmContent {
-	 width:100%; min-height:90%; 
-	 display: block; clear:both; margin:auto; overflow-y: auto;
-	 overflow-x: hidden;
-}
-.directionwrapper {
-	overflow-y: auto;
-	overflow-x: hidden;
-	height: 90%;
-
-	#jqmContent {
-		overflow-y:  hidden;
-		overflow-x: hidden;
-		/*height: 100%;*/
-	}
-}
 .shortwindow #jqmContent { 
 	height: 90%;
 }
