added ligature icon support

--- a/dev/sh.functions.less
+++ b/dev/sh.functions.less
@@ -338,10 +338,25 @@
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	font-smooth: always;
+	/* Enable Ligatures ================ */
+	letter-spacing: 0;
+	-webkit-font-feature-settings: "liga";
+	-moz-font-feature-settings: "liga=1";
+	-moz-font-feature-settings: "liga";
+	-ms-font-feature-settings: "liga" 1;
+	-o-font-feature-settings: "liga";
+	font-feature-settings: "liga";
+	/* ligatures? */
+	content: attr(data-icon);
 }
-/*.design .symbol:before {
-	font-size: 1.6rem;
-}*/
+
+/*using ligature */
+i {
+	font-style: normal;
+	display: inline-block;
+	.symbolDef();
+}
+
 
 .icon(@name, @value) {
 	.@{name} {
