brought back jqmClose

--- a/uidev/sh.Framework.less
+++ b/uidev/sh.Framework.less
@@ -69,6 +69,29 @@
 	}
 }
 
+/*modal close button */
+.jqmClose {
+	position: absolute;
+	top: 5px;
+	right: 5px;
+	display: block;
+	overflow: hidden;
+	#rem > .font-size(1.8);
+	text-align: center;
+	width: 30px;
+	height: 23px;
+	line-height: 0.9em;
+
+	&:before {
+		content: "x";
+	}
+
+	&:hover {
+		#rem > .font-size(2);
+		line-height: 0.7em;
+	}
+}
+
 /* stacks */
 .overview fieldset {
 	margin-bottom: 20px;
