fixed iconset to match vinepaper docs

--- a/uidev/ui.icons.less
+++ b/uidev/ui.icons.less
@@ -4,59 +4,28 @@
 
 .base {
 	.symbolAfter;
-	.changeSymbol(@icon-base,"after");
-}
-.basedark {
-	.symbolAfter;
-	.changeSymbol(@icon-solid-base,"after");
 }
 
-@icon-bell: "H";    .icon(icon-bell, @icon-bell);
-@icon-save: "3";    .icon(icon-save, @icon-save);
-@icon-plus: "4";    .icon(icon-plus, @icon-plus);
-@icon-warning: "5";    .icon(icon-warning, @icon-warning);
-@icon-arrow-down: "6";    .icon(icon-arrow-down, @icon-arrow-down);
-@icon-arrow-left: "7";    .icon(icon-arrow-left, @icon-arrow-left);
-@icon-arrow-right: "8";    .icon(icon-arrow-right, @icon-arrow-right);
-@icon-arrow-up: "9";    .icon(icon-arrow-up, @icon-arrow-up);
-@icon-base: "0";    .icon(icon-base, @icon-base);
-@icon-solid-base: "-";    .icon(icon-solid-base, @icon-solid-base);
-@icon-calendar: "e";    .icon(icon-calendar, @icon-calendar);
-@icon-tick: "r";    .icon(icon-tick, @icon-tick);
-@icon-chevron-down: "t";    .icon(icon-chevron-down, @icon-chevron-down);
-@icon-chevron-left: "y";    .icon(icon-chevron-left, @icon-chevron-left);
-@icon-chevron-right: "u";    .icon(icon-chevron-right, @icon-chevron-right);
-@icon-chevron-up: "i";    .icon(icon-chevron-up, @icon-chevron-up);
-@icon-close: "p";    .icon(icon-close, @icon-close);
-@icon-cog: "s";    .icon(icon-cog, @icon-cog);
-@icon-trash: "g";    .icon(icon-trash, @icon-trash);
-@icon-download: "h";    .icon(icon-download, @icon-download);
-@icon-pen: "j";    .icon(icon-pen, @icon-pen);
-@icon-ellipses: "k";    .icon(icon-ellipses, @icon-ellipses);
-@icon-email: "l";    .icon(icon-email, @icon-email);
-@icon-filter: "z";    .icon(icon-filter, @icon-filter);
-@icon-report: "x";    .icon(icon-report, @icon-report);
-@icon-group: "c";    .icon(icon-group, @icon-group);
-@icon-hourglass: "v";    .icon(icon-hourglass, @icon-hourglass);
-@icon-info-circle: ",";    .icon(icon-info-circle, @icon-info-circle);
-@icon-info: ".";    .icon(icon-info, @icon-info);
-@icon-menu: "~";    .icon(icon-menu, @icon-menu);
-@icon-search: "@";    .icon(icon-search, @icon-search);
-@icon-ellipses-vertical: "#";    .icon(icon-ellipses-vertical, @icon-ellipses-vertical);
-@icon-message: "$";    .icon(icon-message, @icon-message);
-@icon-minus: "%";    .icon(icon-minus, @icon-minus);
-@icon-file-excel: "^";    .icon(icon-file-excel, @icon-file-excel);
-@icon-file-image: "&";    .icon(icon-file-image, @icon-file-image);
-@icon-file-pdf: "*";    .icon(icon-file-pdf, @icon-file-pdf);
-@icon-file: "_";    .icon(icon-file, @icon-file);
-@icon-file-word: "+";    .icon(icon-file-word, @icon-file-word);
-@icon-attatchment: "Q";    .icon(icon-attatchment, @icon-attatchment);
-@icon-print: "W";    .icon(icon-print, @icon-print);
-@icon-question: "R";    .icon(icon-question, @icon-question);
-@icon-collapse: "Y";    .icon(icon-collapse, @icon-collapse);
-@icon-expand: "U";    .icon(icon-expand, @icon-expand);
-@icon-star: "I";    .icon(icon-star, @icon-star);
-@icon-user: "P";    .icon(icon-user, @icon-user);
-@icon-exclamation: "|";    .icon(icon-exclamation, @icon-exclamation);
-@icon-popup: "A";    .icon(icon-popup, @icon-popup);
-@icon-pen-square: "G";    .icon(icon-pen-square, @icon-pen-square);
+.basedark {
+	.symbolAfter;
+}
+
+@icon-plus: "";    .icon(icon-plus, @icon-plus);
+@icon-arrow-back: "";    .icon(icon-arrow-back, @icon-arrow-back);
+@icon-arrow-forward: "";    .icon(icon-arrow-forward, @icon-arrow-forward);
+@icon-flag: "";    .icon(icon-flag, @icon-flag);
+@icon-attach: "";    .icon(icon-attach, @icon-attach);
+@icon-wrench: "";    .icon(icon-wrench, @icon-wrench);
+@icon-tick: "";    .icon(icon-tick, @icon-tick);
+@icon-x: "";    .icon(icon-x, @icon-x);
+@icon-exit: "";    .icon(icon-exit, @icon-exit);
+@icon-info: "";    .icon(icon-info, @icon-info);
+@icon-external: "";    .icon(icon-external, @icon-external);
+@icon-chevron-down: "";    .icon(icon-chevron-down, @icon-chevron-down);
+@icon-chevron-left: "";    .icon(icon-chevron-left, @icon-chevron-left);
+@icon-chevron-right: "";    .icon(icon-chevron-right, @icon-chevron-right);
+@icon-chevron-up: "";    .icon(icon-chevron-up, @icon-chevron-up);
+@icon-exclamation: "";    .icon(icon-exclamation, @icon-exclamation);
+@icon-inbox: "";    .icon(icon-inbox, @icon-inbox);
+@icon-menu: "";    .icon(icon-menu, @icon-menu);
+@icon-question: "";    .icon(icon-question, @icon-question);
