added missing styles from shut

--- a/uidev/sh.Framework.less
+++ b/uidev/sh.Framework.less
@@ -370,6 +370,12 @@ header nav.main {
 	padding-top: 10px;
 }
 
+header nav.tools {
+	position: absolute;
+	right: 0;
+	top: 5px;
+}
+
 /* typography */
 .hsub {
 	color: @greynormal;
